Added app setup and TMDB integration
